--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -10,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favico" rel="icon">
+  <link href="assets/img/apple-touch-icon." rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -29,13 +30,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- ===============================================================================================
-  * Template Name: Bethany - v4.0.1
-  * Template URL: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ================================================================================================= -->
 </head>
 
 <!-- ======= Header ======= -->
@@ -55,11 +49,14 @@
             <li><a class="nav-link scrollto" href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#team"></a></li>
   </header>
-  <!-- End Header -->
+  <br></br>
+  <br></br>
+  <br></br>
+  <!-- ======= End Header ======= -->
 
 
   <!-- ======= Breadcrumbs ======= -->
-  <main id="main">
+  <!--<main id="main">
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
@@ -71,142 +68,142 @@
           </ol>
         </div>
       </div>
-    </section>
-     <!-- ======= End Breadcrumbs ======= -->
+    </section>-->
+  <!-- ======= End Breadcrumbs ======= -->
 
 
-    <!--SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
-    <!-- ===================================== Portfolio Details Section ======================================== -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper-container">
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide">
-                  
-                  <img src="assets/img/pack/img_25-01-21-removebg-preview.png" alt="">
+  <!--SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
+  <!-- ================== Portfolio Details Section ======================= -->
+  <section id="portfolio-details" class="portfolio-details">
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper-container">
+            <div class="swiper-wrapper align-items-center">
+              <div class="swiper-slide">
+
+                <img src="assets/img/pack/img_25-01-21-removebg-preview.png" alt="">
+                <P></P>
+                <div>
                   <P></P>
-                  <div>
-                    <P></P>
-                    <h3>Especificações</h3>
-                    <li>Túnel de encolhimento para 1.200 pacotes / hora;</li>
-                    <li>Construção mista de aço carbono e aço inox;</li>
-                    <li>Ordenador de garrafas automático na entrada da empacotadora;</li>
-                    <li>Fácil regulagem para troca de fomratos;</li>
-                    <li>01 turbina para circulação de ar forçado no túvel de encolhimento;</li>
-                    <li>Fixação das resistências na parte externa do túnel;</li>
-                    <li>Controle eletrônico de temperatura;</li>
-                    <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
-                    <P></P>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/pack/Lateral-removebg-preview.png" alt="">
+                  <h3>Especificações</h3>
+                  <li>Túnel de encolhimento para 1.200 pacotes / hora;</li>
+                  <li>Construção mista de aço carbono e aço inox;</li>
+                  <li>Ordenador de garrafas automático na entrada da empacotadora;</li>
+                  <li>Fácil regulagem para troca de fomratos;</li>
+                  <li>01 turbina para circulação de ar forçado no túvel de encolhimento;</li>
+                  <li>Fixação das resistências na parte externa do túnel;</li>
+                  <li>Controle eletrônico de temperatura;</li>
+                  <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
                   <P></P>
-                  <div>
-                    <h3></h3>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <P></P>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/pack/Barra_Seladora-removebg-preview.png" alt="">
-                  <P></P>
-                  <div>
-                    <h3></h3>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <P></P>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/pack/Perspectiva-removebg-preview.png" alt="">
-                  <P></P>
-                  <div>
-                    <h3></h3>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <P></P>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/pack/Superior-removebg-preview.png" alt="">
-                  <P></P>
-                  <div>
-                    <h3></h3>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <P></P>
-                  </div>
-                </div>
-                <!-- ===================================== End Portfolio Details Section ======================================== -->
-
-
-                <!-- ======= Reponsável ======= -->
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Embaladoras</h3>
-              <ul>
-                <li><strong>Responsável</strong>: Maurício C Gugelmin</li>
-                <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
-              </ul>
-            </div>
-            <!-- ======= End Reponsável ======= -->
-
-
-            <!--BUTTON SOLICITAR ORÇAMENTO VIA WHATSAPP-->
-            <section>
-              <div class="col-md-15 col-sm-12">
-                <div class="addCartBtn">
-                  <div class="input-group">
-                    <span class="input-group-btn">
-                      <button id="addToCartBtn" class="btn btn-success"> <a
-                          href="https://api.whatsapp.com/send?phone=5545991126240" class="btn-get-started scrollto"><i
-                            class="fa fa-check-circle"></i>SOLICITAR ORÇAMENTO VIA WHATSAPP</button>
-                    </span>
-                  </div>
                 </div>
               </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/pack/Lateral-removebg-preview.png" alt="">
+                <P></P>
+                <div>
+                  <h3></h3>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <P></P>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/pack/Barra_Seladora-removebg-preview.png" alt="">
+                <P></P>
+                <div>
+                  <h3></h3>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <P></P>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/pack/Perspectiva-removebg-preview.png" alt="">
+                <P></P>
+                <div>
+                  <h3></h3>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <P></P>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/pack/Superior-removebg-preview.png" alt="">
+                <P></P>
+                <div>
+                  <h3></h3>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <P></P>
+                </div>
+              </div>
+              <!-- ========================= End Portfolio Details Section =============================== -->
+
+
+            <!-- ======= Section Response Infortmation ======= -->
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
         </div>
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>Embaladoras</h3>
+            <ul>
+              <li><strong>Responsável</strong>: Maurício C Gugelmin</li>
+              <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
+            </ul>
+          </div>
+          <!-- ======= End Section Response Infortmation ======= -->
+
+
+          <!-- ======= BUDGET REQUEST BUTTON ======= -->
+          <section>
+            <div class="col-md-15 col-sm-12">
+              <div class="addCartBtn">
+                <div class="input-group">
+                  <span class="input-group-btn">
+                    <button id="addToCartBtn" class="btn btn-success"> <a
+                        href="https://api.whatsapp.com/send?phone=5545991126240" class="btn-get-started scrollto"><i
+                          class="fa fa-check-circle"></i>SOLICITAR ORÇAMENTO VIA WHATSAPP</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
-    </section>
+    </div>
+  </section>
   </main>
-  <!--END BUTTON SOLICITAR ORÇAMENTO VIA WHATSAPP-->
+  <!-- ======= END BUDGET REQUEST BUTTON ======= -->
 
 
 
