--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </head>
 
 
+
 <body>
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -65,9 +67,8 @@
       <a href="#about" class="btn-get-started scrollto">Conheça nossa empresa</a>
     </div>
   </section>
-  <!-- End Hero -->
   <main id="main">
-    <!-- ======= End Hero Section ======= -->
+  <!-- ======= End Hero Section ======= -->
 
 
 
@@ -132,10 +133,10 @@
               </p>
             </h5>
           </div>
+
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
-            <p>
-              Nosso comprometimento social se enquadra nos pricípios que seguimos:
-            </p>
+            <p>Nosso comprometimento social se enquadra nos pricípios que seguimos:</p>
+
             <h5>
               <ul style="text-align: justify;">
                 <li><i class="ri-check-double-line"></i> Temos como missão solucionar problemas através
@@ -157,11 +158,11 @@
         </div>
       </div>
     </section>
-    <!-- ======= End About Section ======= -->
+    <!-- ========= End About Section ========== -->
 
 
 
-    <!-- ======= Vídeo Section ======= -->
+    <!-- =========== Vídeo Section =========== -->
     <figure>
       <video poster autoplay loop="videos/cover.jpg" controls>
         <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
@@ -174,7 +175,7 @@
 
 
 
-    <!-- ======= Why Us Section ======= -->
+    <!-- ======= Section process ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
         <div class="row">
@@ -223,7 +224,7 @@
         </div>
       </div>
     </section>
-    <!-- ======= End Why Us Section ======= -->
+    <!-- ======= End Section process ======= -->
 
 
 
@@ -282,7 +283,7 @@
     <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="section-title" data-aos="fade-left">
-          <h2>EMPRESAS & produtos</h2>
+          <h2>EMPRESAS & PRODUTOS</h2>
           <p>Confira nossos parceiros</p>
         </div>
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -363,7 +364,6 @@
             </div>
           </div>
 
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-ag">
             <div class="portfolio-wrap">
               <img src="assets/img/caalga/caalga agro - Manifolde Hidraulico.png" class="img-fluid" alt="">
@@ -378,6 +378,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-cf">
             <div class="portfolio-wrap">
               <img src="assets/img/caalga/c1.png" class="img-fluid" alt="">
@@ -408,6 +409,7 @@
                 <p>Estamos prontos para atende-lo!</p>
               </div>
             </div>
+
             <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
               <iframe style="border:0; width: 100%; height: 270px;"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3624.458804040343!2d-53.7228351850002!3d-24.711124284124576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f3be46214c8ae1%3A0x73a748197c84837d!2sCaalga%20Solu%C3%A7%C3%B5es%20Industriais%20Eireli%20ME!5e0!3m2!1spt-BR!2sbr!4v1614905496708!5m2!1spt-BR!2sbr"
@@ -417,6 +419,7 @@
                 <h4>Localização:</h4>
                 <p>R. Rio Grande do Sul, 1401 - Jardim Porto Alegre, Toledo - PR, 85906-140</p>
               </div>
+
               <div class="row">
                 <div class="col-lg-6 mt-4">
                   <div class="info">
@@ -425,6 +428,7 @@
                     <p>pcp1@caalga.com.br</p>
                   </div>
                 </div>
+
                 <div class="col-lg-6">
                   <div class="info w-100 mt-4">
                     <i class="bi bi-phone"></i>
@@ -433,21 +437,28 @@
                   </div>
                 </div>
               </div>
+              <!-- ======= End Contact Section ======= -->
+
+              <!-- ======= Email Section ======= -->
               <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required>
                   </div>
+
                   <div class="col-md-6 form-group mt-3 mt-md-0">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" required>
                   </div>
                 </div>
+
                 <div class="form-group mt-3">
                   <input type="text" class="form-control" name="subject" id="subject" placeholder="Título" required>
                 </div>
+
                 <div class="form-group mt-3">
                   <textarea class="form-control" name="message" rows="5" placeholder="Menssagem" required></textarea>
                 </div>
+
                 <div class="my-3">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
@@ -461,7 +472,7 @@
         </div>
       </section>
   </main>
-  <!-- ======= End Contact Section ======= -->
+  <!-- ======= End Email Section ======= -->
 
 
   <!-- ======= Footer ======= -->
@@ -502,7 +513,7 @@
             <a href="http://w.visao" target="_blank">
               <img src="./assets/img/caalga/logo torange.png" alt="Logo Torange"
                 style="width: 75px;position: relative;top: -5px;margin: 0 2px;">
-          
+
           </span>
   </footer>
   <!-- ======= End Footer ======= -->
@@ -525,3 +536,5 @@
 </body>
 
 </html>
+
+ <!-- ======= The end code ======= -->
