--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!--Favicons-->
-  <!--<link href="assets/img/caalga/favorite icon.png" rel="icon">-->
-  <!--<link href="assets/img/caalga/closure logo.png" rel="icon">-->
+  <link href="assets/img/caalga/favorite icon.png" rel="icon">
+  <link href="assets/img/caalga/closure logo.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
