--- a/portfolio-details-insdustrial.html
+++ b/portfolio-details-insdustrial.html
@@ -90,14 +90,14 @@
                     <div>
                       <P></P>
                       <h3>Especificações</h3>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
-                      <li>TESTE</li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
                       <P></P>
                     </div>
                   </div>
@@ -105,91 +105,73 @@
                   <div class="swiper-slide">
                     <img src="assets/img/caalga/caalga solucoes industriais - aplicador adesivo 1.png" alt="">
                     <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
+                    <div>
+                      <P></P>
+                      <h3>Especificações</h3>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <P></P>
+                    </div>
                   </div>
 
                   <div class="swiper-slide">
                     <img src="assets/img/caalga/caalga solucoes industriais - cilindro de pinças.png" alt="">
                     <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
+                    <div>
+                      <P></P>
+                      <h3>Especificações</h3>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <P></P>
+                    </div>
                   </div>
 
                   <div class="swiper-slide">
                     <img src="assets/img/caalga/caalga solucoes industriais - imagem 008.png" alt="">
                     <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="assets/img/caalga/caalga solucoes indutrais - filtro A.png" alt="">
-                    <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="assets/img/caalga/seladora.jpg" alt="">
-                    <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
+                    <div>
+                      <P></P>
+                      <h3>Especificações</h3>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <P></P>
+                    </div>
                   </div>
 
                   <div class="swiper-slide">
                     <img src="assets/img/caalga/caalga solucoes indutriais - enchedora.png" alt="">
                     <P></P>
-                    <h3>Especificações</h3>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <li>TESTE</li>
-                    <P></P>
+                    <div>
+                      <P></P>
+                      <h3>Especificações</h3>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <P></P>
+                    </div>
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
