--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -33,6 +33,7 @@
 </head>
 
 <!-- ======= Header ======= -->
+
 <body>
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -166,10 +167,11 @@
                   <P></P>
                 </div>
               </div>
-              <!-- ========================= End Portfolio Details Section =============================== -->
+              <!-- ================== End Portfolio Details Section ===================== -->
 
 
-            <!-- ======= Section Response Infortmation ======= -->
+
+              <!-- ======= Section Response Infortmation ======= -->
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -185,6 +187,7 @@
           <!-- ======= End Section Response Infortmation ======= -->
 
 
+          
           <!-- ======= BUDGET REQUEST BUTTON ======= -->
           <section>
             <div class="col-md-15 col-sm-12">
