--- a/portfolio-details-transport.html
+++ b/portfolio-details-transport.html
@@ -14,7 +14,9 @@
   <link href="assets/img/caalga/logo transport system.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -55,7 +57,7 @@
             <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
             <li><a class="nav-link scrollto " href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#team"></a></li>
-        
+
   </header><!-- End Header -->
 
   <main id="main">
@@ -78,21 +80,16 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-
         <div class="row gy-4">
-
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/closure system - Rosa.png" alt="">
                 </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -108,7 +105,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2><!--SOBRE--></h2>
+              <h2>
+                <!--SOBRE-->
+              </h2>
               <p>
                 <!--SOBRE-->
               </p>
@@ -123,46 +122,44 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <footer id="footer"></footer>
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h3>CAALGA</h3>
+          <p>
+            R. Rio Grande do Sul, 1401<br>
+            Toledo - PR<br>
+            Brasil <br><br>
+            <strong>Phone:</strong> +55 (45) 3054-1237<br>
+            <strong>Email:</strong> pcp1@caalga.com.br<br>
+          </p>
+        </div>
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>CAALGA</h3>
-            <p>
-              R. Rio Grande do Sul, 1401<br>
-              Toledo - PR<br>
-              Brasil <br><br>
-              <strong>Phone:</strong> +55 (45) 3054-1237<br>
-              <strong>Email:</strong> pcp1@caalga.com.br<br>
-            </p>
+        <div class="container d-md-flex py-4">
+          <div class="me-md-auto text-center text-md-start">
+            <div class="copyright">
+              &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+              <!-- All the links in the footer should remain intact. -->
+              <!-- You can delete the links only if you purchased the pro version. -->
+              <!-- Licensing information: https://bootstrapmade.com/license/ -->
+              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/ -->
+              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
           </div>
-
-    <div class="container d-md-flex py-4">
-
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
+          <div class="social-links text-center text-md-right pt-3 pt-md-0">
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          </div>
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+        </footer><!-- End Footer -->
 
 </body>
+
 </html>
