--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -68,7 +67,7 @@
     </div>
   </section>
   <main id="main">
-  <!-- ======= End Hero Section ======= -->
+    <!-- ======= End Hero Section ======= -->
 
 
 
@@ -161,7 +160,6 @@
     <!-- ========= End About Section ========== -->
 
 
-
     <!-- =========== Vídeo Section =========== -->
     <figure>
       <video poster autoplay loop="videos/cover.jpg" controls>
@@ -172,7 +170,6 @@
       </video>
     </figure>
     <!-- ======= End Vídeo Section ======= -->
-
 
 
     <!-- ======= Section process ======= -->
@@ -254,6 +251,7 @@
               </p>
             </div>
           </div>
+          
           <div class="col-lg-8">
             <div class="row">
               <div class="col-md-6 d-flex align-items-stretch">
@@ -279,7 +277,7 @@
     <!-- ======= End Services Section ======= -->
 
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ========= Portfolio Section ======== -->
     <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="section-title" data-aos="fade-left">
@@ -439,6 +437,8 @@
               </div>
               <!-- ======= End Contact Section ======= -->
 
+
+
               <!-- ======= Email Section ======= -->
               <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
                 <div class="row">
@@ -501,7 +501,7 @@
 
             <div class="social-links text-center text-md-right pt-3 pt-md-0">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/caalga" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -509,12 +509,13 @@
           </div>
 
           <span class="copyright">
-            Desenvolvido por
-            <a href="http://w.visao" target="_blank">
-              <img src="./assets/img/caalga/logo torange.png" alt="Logo Torange"
-                style="width: 75px;position: relative;top: -5px;margin: 0 2px;">
-
+            Desenvolvido por Torange Mídia
+            <a href="LINK DO SITE" target="_blank"></a>
+            <img src="" alt="Logo Torange">
           </span>
+        </div>
+      </div>
+    </div>
   </footer>
   <!-- ======= End Footer ======= -->
 
@@ -522,7 +523,6 @@
   <!-- ==================================================================================== -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -530,11 +530,9 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- ==================================================================================== -->
 </body>
 
 </html>
-
- <!-- ======= The end code ======= -->
+<!-- ======= End code ======= -->
