--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
           <!-- Uncomment below if you prefer to use an image logo -->
           <a href="index.html"><img src="assets/img/caalga/LOGOS VETORES (2).png" alt="" class="img-fluid"></a>
         </div>
+      </div>
+    </div>
 
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
             <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
             <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-            <li><a class="nav-link scrollto " href="#portfolio">Empresas</a></li>
+            <li><a class="nav-link scrollto" href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
             <li><a class="nav-link scrollto" href="#contact"></a></li>
           </ul>
@@ -509,9 +511,9 @@
           </div>
 
           <span class="copyright">
-            Desenvolvido por Torange Mídia
-            <a href="LINK DO SITE" target="_blank"></a>
-            <img src="" alt="Logo Torange">
+            Desenvolvido por
+            <a href="https://themes.shopify.com/login" target="_blank"></a>
+            <img src="./assets/img/betta.png" alt="">
           </span>
         </div>
       </div>
