--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!--Favicons-->
-  <link href="assets/img/caalga/favorite icon.png" rel="icon">
+  <link href="assets/img/garrafa.JPG" rel="icon">
   <link href="assets/img/caalga/closure logo.png" rel="icon">
 
   <!-- Google Fonts -->
@@ -513,13 +513,14 @@
           <span class="copyright">
             Desenvolvido por
             <a href="https://themes.shopify.com/login" target="_blank"></a>
-            <img src="./assets/img/betta.png" alt="">
+            <img src="./assets/img/betta.png" alt="https://instagram.com/bettasystem">
           </span>
         </div>
       </div>
     </div>
   </footer>
   <!-- ======= End Footer ======= -->
+
 
 
   <!-- ==================================================================================== -->
